test/libhyperion/syntaxTests/types/address/nonpayable_address_to_contract_payable_fallback.hyp
contract C {
  function f() public pure returns (C c) {
    address a = address(2);
    c = C(a);
  }
  fallback() external payable {
  }
}
// ----
// Warning 3628: (0-139): This contract has a payable fallback function, but no receive quanta function. Consider adding a receive quanta function.
// TypeError 7398: (92-96): Explicit type conversion not allowed from non-payable "address" to "contract C", which has a payable fallback function.
